[package]
name = "arg-proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.12.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
time = { version = "0.3.36", features = ["wasm-bindgen"] }
url = "2.5.0"
worker = "0.0.18"

[build-dependencies]
prost-build = "0.12.4"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
